Subdivision modifier slower than Blender2.79 non-OpenSubDiv in edit mode #70826

Closed
opened 2019-10-15 00:47:42 +02:00 by Alberto Velázquez · 19 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.2 26.20.13003.1007

Blender Version
Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-12 15:33, hash: 95f020c853
Worked: Blender 2.79

I created this bug report at Sergey's request in devtalk.

Short description of error
Blender Subdivision modifier slower in different edit modes compare with blender2.79 Non-OpenSubDiv subdivision, No matter if the mesh is created entirely from quads, triangles or ngons. also it appear that needs a "start" time to activate the subdivision or when you move the vertex, something that didn't happen with 2.79 subdivision.

  • edit quad mesh with subdivision
  • edit lattice for an object with subdivision

Exact steps for others to reproduce the error
Open the shared files to test different conditions. The results in my test are

EDIT MODE mesh with quads

2019-10-11 13-14-38.mp4

  • 2.79: 50fps
  • 2.80: 10fps

Lattice

2.mp4

  • 2.79: 19fps
  • 2.80: 10fps

Armature mesh only with quads

  • 2.79: 4,5fps
  • 2.80: 6 fps

Test_edit.blend

Test_lattice.blend

Test_armature.blend

Test_wheel.blend

Also I provided other mesh file that show strange behaviors that I comment in next comment.

This problem is a extreme regression since it made impossible to work with blender2.80 with hard-surfaces, animation characters,... Specially when the undo-Z can need 4-5 seconds only when the scene have some subdivision objects and this problem disappear when you deactivate the subdivision.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.2 26.20.13003.1007 **Blender Version** Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-12 15:33, hash: `95f020c853` Worked: Blender 2.79 I created this bug report at Sergey's request in devtalk. **Short description of error** Blender Subdivision modifier slower in different edit modes compare with blender2.79 Non-OpenSubDiv subdivision, No matter if the mesh is created entirely from quads, triangles or ngons. also it appear that needs a "start" time to activate the subdivision or when you move the vertex, something that didn't happen with 2.79 subdivision. - edit quad mesh with subdivision - edit lattice for an object with subdivision **Exact steps for others to reproduce the error** Open the shared files to test different conditions. The results in my test are EDIT MODE mesh with quads [2019-10-11 13-14-38.mp4](https://archive.blender.org/developer/F7818560/2019-10-11_13-14-38.mp4) - 2.79: 50fps - 2.80: 10fps Lattice [2.mp4](https://archive.blender.org/developer/F7818556/2.mp4) - 2.79: 19fps - 2.80: 10fps Armature mesh only with quads - 2.79: 4,5fps - 2.80: 6 fps [Test_edit.blend](https://archive.blender.org/developer/F7818543/Test_edit.blend) [Test_lattice.blend](https://archive.blender.org/developer/F7818544/Test_lattice.blend) [Test_armature.blend](https://archive.blender.org/developer/F7818546/Test_armature.blend) [Test_wheel.blend](https://archive.blender.org/developer/F7818545/Test_wheel.blend) Also I provided other mesh file that show strange behaviors that I comment in next comment. This problem is a extreme regression since it made impossible to work with blender2.80 with hard-surfaces, animation characters,... Specially when the undo-Z can need 4-5 seconds only when the scene have some subdivision objects and this problem disappear when you deactivate the subdivision.

Added subscriber: @AlbertoVelazquez

Added subscriber: @AlbertoVelazquez

#68469 was marked as duplicate of this issue

#68469 was marked as duplicate of this issue

#70972 was marked as duplicate of this issue

#70972 was marked as duplicate of this issue

Side effects of the actual subdivision.

2019-10-11 14-15-05.mp4

2019-10-11 14-32-27.mp4

Side effects of the actual subdivision. [2019-10-11 14-15-05.mp4](https://archive.blender.org/developer/F7818570/2019-10-11_14-15-05.mp4) [2019-10-11 14-32-27.mp4](https://archive.blender.org/developer/F7818569/2019-10-11_14-32-27.mp4)
Member

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @kosblend

Added subscriber: @kosblend
Sergey Sharybin self-assigned this 2019-10-15 17:35:35 +02:00

Also I provided other mesh file that show strange behaviors that I comment in next comment.

Please never report two issues under the same task. Make a separate one for this.
Also try to explain what exactly wrong in a plain text. Simply uploading videos doesn't add that much value.

The edit mode performance i'll have a look into.

> Also I provided other mesh file that show strange behaviors that I comment in next comment. Please never report two issues under the same task. Make a separate one for this. Also try to explain what exactly wrong in a plain text. Simply uploading videos doesn't add that much value. The edit mode performance i'll have a look into.

@AlbertoVelazquez, what is your CPU?

@AlbertoVelazquez, what is your CPU?

@Sergey I have two CPUs, intel i7 4790 and amd ryzen 3700x, videos recorded in the Ryzen. I can also test it in other intel i7 and a old quad core.

@Sergey I have two CPUs, intel i7 4790 and amd ryzen 3700x, videos recorded in the Ryzen. I can also test it in other intel i7 and a old quad core.

There are some threading scheduler issues i've found. Working on solving them.
This isn't limited to the edit mode though (at least not as long as topology stays the same).

There are some threading scheduler issues i've found. Working on solving them. This isn't limited to the edit mode though (at least not as long as topology stays the same).

Added subscribers: @Hyesung, @LazyDodo, @dark999

Added subscribers: @Hyesung, @LazyDodo, @dark999
Sergey Sharybin was unassigned by Dalai Felinto 2019-12-23 13:46:58 +01:00

Added subscribers: @YegorSmirnov, @mano-wii, @RORU, @JacquesLucke

Added subscribers: @YegorSmirnov, @mano-wii, @RORU, @JacquesLucke

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Dalai Felinto self-assigned this 2020-02-06 18:22:22 +01:00

The threading scheduler is already in master (upcoming 2.82), so the daily builds should already show a better performance. So all the known issues on that are fixed. If the problem persist with a recent build builder.blender.org please report a new issue.

The threading scheduler is already in master (upcoming 2.82), so the daily builds should already show a better performance. So all the known issues on that are fixed. If the problem persist with a recent build builder.blender.org please report a new issue.

Added subscriber: @youthatninja

Added subscriber: @youthatninja

140 faces and bevel modifier + subd lvl 2
Performance as in 2.80
Blender version: 2.82 release

140 faces and bevel modifier + subd lvl 2 Performance as in 2.80 Blender version: 2.82 release

I don’t see any substantial improvements in 2.82.7
Playback is incredibly slow when the Subdivision modifier is applied to a mesh with animated shapes or bones.
In 2.79 and Maya it is tens of times faster.
2.82.7:
https://youtu.be/csYeyNDWyxE
Maya:
https://youtu.be/hiX8bCpOwzE
2.79:
https://youtu.be/CnLUnFdQ38s

I don’t see any substantial improvements in 2.82.7 Playback is incredibly slow when the Subdivision modifier is applied to a mesh with animated shapes or bones. In 2.79 and Maya it is tens of times faster. 2.82.7: https://youtu.be/csYeyNDWyxE Maya: https://youtu.be/hiX8bCpOwzE 2.79: https://youtu.be/CnLUnFdQ38s

https://youtu.be/dzIl_S-qHIQ
In this video you can see the speed reached in 2014 on Blender. Was the same test done in 2.8?

https://youtu.be/dzIl_S-qHIQ In this video you can see the speed reached in 2014 on Blender. Was the same test done in 2.8?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70826
No description provided.