source/blender/blenkernel/intern/subdiv_foreach.c
@@ -1825,6 +1825,7 @@ bool BKE_subdiv_foreach_subdiv_geometry(Subdiv *subdiv,
   BLI_parallel_range_settings_defaults(&parallel_range_settings);
   parallel_range_settings.userdata_chunk = context->user_data_tls;
   parallel_range_settings.userdata_chunk_size = context->user_data_tls_size;
+  parallel_range_settings.min_iter_per_thread = 1;
   if (context->user_data_tls_free != NULL) {
     parallel_range_settings.func_finalize = subdiv_foreach_finalize;
   }
